@@ -1,0 +1,8 @@
+Title: new version of Check_MKs hardware and software inventory including a much extended windows agent and inventory functions
+Level: 2
+Component: inv
+Version: 1.2.5i4
+Date: 1402415288
+Class: feature
+
+
