@@ -25,34 +25,17 @@
 # Boston, MA 02110-1301 USA.
 
 # Example output
-# <<<win_wmi_software:sep(124)>>>
-# 64 Bit HP CIO Components Installer|Hewlett-Packard|15.2.1
-# Adobe Flash Player 12 ActiveX|Adobe Systems Incorporated|12.0.0.70
-# Microsoft Visio 2010 Interactive Guide DEU|Microsoft|1.2.1
-# Microsoft Outlook 2010 Interactive Guide DEU|Microsoft|1.2.1
-# VMware vSphere Client 4.1|VMware, Inc.|4.1.0.17435
-# Microsoft Office Professional Plus 2010|Microsoft Corporation|14.0.7015.1000
+# <<<lnx_uname>>>
+# Linux klappmesser 3.10.17 #2 SMP PREEMPT Mon Nov 25 19:51:52 CET 2013 x86_64 GNU/Linux
 
+def inv_lnx_uname(info):
+    node = inv_tree("software.os.")
+    line = info[0]
+    if len(line) >= 6:
+        node["kernel"] = line[1:6]
+    if len(line) >= 13:
+        node["arch"] = line[-2]
 
-def inv_win_wmi_software(info):
-    paclist = inv_tree("software.packages:")
-    for line in info:
-        pacname, vendor, version = line[0:3]
-        dat = line[3]
-        install_date = ""
-        if len(dat) == 8 and re.match("^20", dat):
-            install_date = int(time.mktime(time.strptime(dat, "%Y%m%d")))
-
-        entry = {
-            "name"            : pacname,
-            "version"         : version,
-            "vendor"          : vendor,
-            "install_date"    : install_date,
-            "package_type"    : "wmi",
-        }
-        paclist.append(entry)
-
-
-inv_info['win_wmi_software'] = {
-   "inv_function"           : inv_win_wmi_software,
+inv_info['lnx_uname'] = {
+   "inv_function"           : inv_lnx_uname,
 }
