@@ -25,34 +25,21 @@
 # Boston, MA 02110-1301 USA.
 
 # Example output
-# <<<win_wmi_software:sep(124)>>>
-# 64 Bit HP CIO Components Installer|Hewlett-Packard|15.2.1
-# Adobe Flash Player 12 ActiveX|Adobe Systems Incorporated|12.0.0.70
-# Microsoft Visio 2010 Interactive Guide DEU|Microsoft|1.2.1
-# Microsoft Outlook 2010 Interactive Guide DEU|Microsoft|1.2.1
-# VMware vSphere Client 4.1|VMware, Inc.|4.1.0.17435
-# Microsoft Office Professional Plus 2010|Microsoft Corporation|14.0.7015.1000
+# <<<win_os>>>
+# WIN7|Microsoft Windows 7 Home Premium |6.1.7601|64-Bit|1|0
 
+def inv_win_os(info):
+    node = inv_tree("software.os.")
+    line = info[0]
+    if len(line) == 6:
+        node["name"] = line[1]
+        node["kernel"] = line[2]
+        if line[3] == "64-Bit":
+            node["arch"] = "x86_64"
+        else:
+            node["arch"] = "i386"
+        node["service_pack"] = line[4]+"."+line[5]
 
-def inv_win_wmi_software(info):
-    paclist = inv_tree("software.packages:")
-    for line in info:
-        pacname, vendor, version = line[0:3]
-        dat = line[3]
-        install_date = ""
-        if len(dat) == 8 and re.match("^20", dat):
-            install_date = int(time.mktime(time.strptime(dat, "%Y%m%d")))
-
-        entry = {
-            "name"            : pacname,
-            "version"         : version,
-            "vendor"          : vendor,
-            "install_date"    : install_date,
-            "package_type"    : "wmi",
-        }
-        paclist.append(entry)
-
-
-inv_info['win_wmi_software'] = {
-   "inv_function"           : inv_win_wmi_software,
+inv_info['win_os'] = {
+   "inv_function"           : inv_win_os,
 }
